agent9527-rs/tui/src/bottom_pane/snapshots/agent9527_tui__bottom_pane__feedback_view__tests__feedback_view_render.snap
---
source: tui/src/bottom_pane/feedback_view.rs
expression: rendered
---
  Do you want to upload logs before reporting issue?

  Logs may include the full conversation history of this Agent9527 process
  These logs are retained for 90 days and are used solely for troubles

  You can review the exact content of the logs before they’re uploaded
  <LOG_PATH>


› 1. Yes     Share the current Agent9527 session logs and diagnostics with the team
             for troubleshooting.
  2. No
  3. Cancel
